# co-pivot

./: .gitignore  README.md  index.html  package.json  vite.config.ts
electron/: main.cjs  preload.cjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/features/sessions/components/: SessionListPane.tsx  SessionSplitView.tsx
src/features/sessions/lib/: mockSessions.ts  resumeNoteDraft.ts  searchRanking.ts  sessionSource.ts  useSessionWorkspace.ts
src/features/sessions/types/: session.ts
src/styles/: app.css  theme.ts
