[package]
name = "co-pivot"
version = "0.1.0"
description = "Desktop session browser for GitHub Copilot CLI"
authors = ["aiheon"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.1" }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.3.1", features = [] }

[features]
default = []
